Fix visibility and interaction of hamburger and dropdown menus on all devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -71,6 +71,11 @@ a:hover {
 
 .menu-toggle {
   display: none;
+  background: none;
+  border: none;
+  font-size: 2rem;
+  cursor: pointer;
+  color: #333;
 }
 
 .main-nav {
@@ -149,6 +154,8 @@ a:hover {
   cursor: pointer;
   width: 100%;
   text-align: left;
+  color: #333;
+  font-weight: 600;
 }
 
 /* Dropdown content */
